[tool.poetry]
name = "faker-cli"
version = "0.3.0"
description = "Command-line fake data generator"
authors = ["Damon P. Cortesi <d.lifehacker@gmail.com>"]
readme = "README.md"
packages = [{include = "faker_cli"}]

[tool.poetry.dependencies]
python = "^3.9"
faker = "^18.9.0"
click = "^8.1.3"
pyarrow = "^12.0.0"
deltalake = "^0.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fake = "faker_cli.cli:main"

[tool.black]
line-length = 119

[tool.ruff]
line-length = 119